# booktime

./: .mypy.ini  README.md  pyproject.toml
booktime/: settings.py  urls.py
booktime/main/: apps.py  forms.py  tests.py  urls.py  views.py
booktime/main/tests/: test_forms.py
templates/: base.html
templates/main/: about.html  contact_form.html  index.html
